[package]
name = "floc"
version = "0.1.0"
authors = ["Lucas Poffo <lucas.poffo@magrathealabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.22.1"
nalgebra = "0.19"
rand = "0.7"
num = "0.2.1"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
